# OdinsList

./: .env.example  .gitignore  LICENSE  OdinsList.py  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/odinslist/: __init__.py  __main__.py  cli.py  config.py  ipc.py
src/odinslist/assets/Logos/: eye_logo_ansi.txt  text_logo_anscii.txt
src/odinslist/core/: browser.py  comicvine.py  events.py  gcd.py  models.py  normalization.py  scanner.py  scoring.py  visual.py  vlm.py
src/tui/: package.json
src/tui/scripts/: embed-assets.ts
src/tui/src/: App.tsx  index.tsx  setup.ts  theme.ts  types.ts
src/tui/src/components/: ActiveRunView.tsx  AnsiArt.tsx  BrailleProgressBar.tsx  DirectoryPicker.tsx  EyeSpinner.tsx  HomeView.tsx  ImagePreview.tsx  MainMenu.tsx  NewRunWizard.tsx  PixelArt.tsx  ResultsView.tsx  RuneRevealMatch.tsx  RuneSpinner.tsx  SettingsView.tsx  SetupView.tsx  StatusBar.tsx
src/tui/src/hooks/: useAppState.ts  useBackend.ts
src/tui/src/scripts/: test-chafa.ts
src/tui/src/utils/: ansiArt.test.ts  ansiArt.ts  chafa.test.ts  chafa.ts  pixelArt.test.ts  pixelArt.ts  resumeRun.test.ts  resumeRun.ts  runMetadata.ts
